fix: fjern scrollbar på tomt compact textarea
affects: @fremtind/jkl-text-input

ISSUES CLOSED: #2634

--- a/packages/text-input/text-input.scss
+++ b/packages/text-input/text-input.scss
@@ -264,6 +264,10 @@ $text-input-selection-color--inverted: color.scale(
         resize: none; // Disable textarea resize
     }
 
+    &.jkl-text-input--compact .jkl-text-input__input:empty {
+        overflow: hidden;
+    }
+
     &--with-counter {
         $progress-bar-height: rem(4px);
 
